# lingmo-flatpak

./: CMakeLists.txt  README.md
.github/workflows/: package.yml
debian/: changelog  control  copyright  liblingmoflatpak-dev.install  liblingmoflatpak1.install
include/lingmo-flatpak/: export.h
rpm/: lingmo-flatpak.spec
